# Windows-Network-Recovery-Toolkit

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  PORTFOLIO.html  PORTFOLIO.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  REVIEWER_PROOF_PACK.md  SECURITY.md  SYSTEM_DESIGN.md  agent.py  audit.py  conftest.py  docker-compose.demo.yml  docker-compose.full.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.scale.yml  docker-compose.yml  instruction.md  mlflow.db  package-lock.json  prd.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-platform.txt  requirements.txt  start-api.ps1  structure.txt
.github/: pull_request_template.md
agent/: README.md  __init__.py  __main__.py  agent.py  classifier.py  cli.py  collector.py  executor.py  jsonl_logger.py  planner.py  remote_uploader.py  requirements.txt  schemas.py  verifier.py
backend/: .env.example  README.md  __init__.py  __main__.py  agent_routes.py  auth.py  billing.py  canonical_routes.py  db.py  decision_platform_routes.py  engine.py  enterprise_risk_routes.py  jwt_auth.py  live_observability.py  main.py  observability_metrics.py  platform_auth.py  platform_demo_routes.py  platform_fleet_routes.py  platform_mdp_routes.py  platform_routes.py  platform_sre_routes.py  platform_v2_routes.py  prometheus_exporter.py  requirements.txt  schema.sql  technology_risk_routes.py  toolkit.db  tracing.py  trisk_logging.py  trisk_metrics.py  v1_routes.py
config/: last_known_good_proxy.example.json  last_known_good_proxy.json  platform_policy.example.json  platform_policy.example.yaml  platform_policy.yaml  proxy_allowlist.yaml  proxy_guard_policy.json
core/: __init__.py  __main__.py  actions.py  decision.py  features.py  probes.py
demo_data/: manifest.json
docs/: CHANGELOG_TIER1_PLATFORM.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_PLAN_ERP.md  ONBOARDING.md  PROXY_INVESTIGATION.md  README.md  README_BIG4_PORTFOLIO.md  START_HERE.md  TROUBLESHOOTING_PROXY.md  WORKFLOW.md  abuse_cases.md  agent-deployment.md  agent-workflow-spec.md  agent_next_step.md  ai-assisted-delivery.md  ai-evals-feedback-loop.md  ai-native-platform-architecture.md  ai-risk-analyst-guardrails.md  ai_investigation_platform_architecture.md  analytics-powerbi-quickstart.md  analytics_data_model.md  anti-code-paste-defense.md  api-trisk-examples.md  api_contract_platform.md  architecture-infographic.md  architecture.md  architecture_failure_knowledge.md  architecture_platform.md  architecture_service.md  audit-evidence-model.md  audit-hash-chain-explained.md  audit_chain_of_custody.md  backend_contract.md  bad_gateway_diagnostic.md  big4-cyber-risk-positioning.md  big4-interview-defense.md  big4-senior-risk-review.md  big4_demo_flow.md  big4_interview_pitch.md  big4_interview_positioning.md  (+209 more)
edge_device/: __init__.py  audit.py  cli_handlers.py  models.py  policy.py  reasoning.py  scenarios.py  signals.py  simulator.py
endpoint_agent/: __init__.py  __main__.py  agent.py  client.py  collect.py  collector_abstraction.py  config.py  heartbeat.py  local_events.py  service_runner.py
evidence/: __init__.py  attribution_engine.py  etw_reader.py  etw_stub.py  evidence_event.py  models.py  procmon_csv.py  procmon_importer.py  registry_event_parser.py  registry_writer.py  registry_writer_proof.py  sysmon_eventlog.py  sysmon_reader.py
(+1705 files in other folders)
