[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "windows-network-recovery-toolkit"
version = "0.2.0"
description = "Local-first Windows endpoint reliability and policy-gated remediation toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27",
    "stripe>=9.0",
    "sqlmodel>=0.0.22",
]

[project.optional-dependencies]
postgres = [
    "psycopg2-binary>=2.9",
]
worker = [
    "redis>=5.0",
    "rq>=2.0",
]
trisk = [
    "redis>=5.0",
    "rq>=2.0",
]
browser = [
    "playwright>=1.40",
]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "black>=24.0",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "types-python-jose",
    "pip-audit>=2.7",
    "bandit>=1.7",
    "pandas>=2.0",
]

[project.scripts]
wnrt-api = "backend.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "platform_core*",
    "backend*",
    "evidence*",
    "telemetry*",
    "failure_system*",
    "src*",
    "edge_device*",
    "endpoint_agent*",
    "windows_network_toolkit*",
    "toolkit*",
    "mcp_server*",
]
exclude = ["tests*", "frontend*", "scripts*", "docs*"]

[tool.pytest.ini_options]
# Primary config lives in pytest.ini (pytest prefers pytest.ini over this section).
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["platform_core", "backend", "evidence", "failure_system", "telemetry"]
omit = ["tests/*", "*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 0

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = '''
/(
    \.git
  | \.pytest_cache
  | node_modules
  | frontend
  | hybrid_frontend
  | platform_data
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "frontend",
    "hybrid_frontend",
    "node_modules",
    "platform_data",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line length handled by black
    "B008",  # FastAPI Depends in defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
"src/cli.py" = ["E402"]
"backend/platform_routes.py" = ["E402"]
"failure_system/models.py" = ["UP042"]
"platform_core/reasoning/layers.py" = ["UP042"]
"platform_core/reliability/models.py" = ["UP042"]
"platform_core/sre/**/*.py" = ["UP042"]
"network_agent/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
explicit_package_bases = true
files = [
    "platform_core",
    "src/platform_core",
    "backend",
    "evidence",
    "failure_system",
    "windows_network_toolkit",
    "tests/policy",
    "tests/api",
    "tests/replay",
]

[[tool.mypy.overrides]]
module = [
    "stripe.*",
    "jose.*",
]
ignore_missing_imports = true
